tests/paczka1/fuzzy1/33178276.err
Error in line 2: P2VcrQd S0 7,9
Error in line 3: O5woAfGgQDz A338 87,84
Error in line 4: S0 S75 29,8
Error in line 5: WWPxi S0 60,4
Error in line 8: S0 S528 19,1
Error in line 11: WWPxi S0 212,6
Error in line 16: S0 S528 47,0
Error in line 12: yRGrnB S75 31,8
Error in line 22: S0 S0 92,3
Error in line 20: nMQ2X3lX1y A338 68,1
Error in line 26: S0 S0 302,7
Error in line 27: nMQ2X3lX1y S0 92,8
Error in line 23: nMQ2X3lX1y S75 55,2
Error in line 29: qR90hF S528 45,13
Error in line 31: S0 A338 68,2
Error in line 34: S0 A338 152,1
Error in line 38: ?S0
